--- a/profil.html
+++ b/profil.html
@@ -52,7 +52,7 @@
                 <div class="profile-avatar">
                     <img src="image/-a.jpg" alt="Foto Profil">
                 </div>
-                <h2 class="profile-name">Herlita</h2>
+                <h2 class="profile-name">Jemi Aditia</h2>
                 <span class="profile-status">Member Premium</span>
             </div>
             
@@ -123,11 +123,11 @@
                         <div>
                             <div class="info-group">
                                 <span class="info-label">Nama Lengkap</span>
-                                <span class="info-value">Herlita</span>
+                                <span class="info-value">Jemi Aditia</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Email</span>
-                                <span class="info-value">hlita7636@gmail.com</span>
+                                <span class="info-value">jemiaditia@gmail.com</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Nomor Telepon</span>
@@ -137,11 +137,11 @@
                         <div>
                             <div class="info-group">
                                 <span class="info-label">Tanggal Lahir</span>
-                                <span class="info-value">13 juni 2005</span>
+                                <span class="info-value">14 juli 2006</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Jenis Kelamin</span>
-                                <span class="info-value">Perempuan</span>
+                                <span class="info-value">Laki-laki</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Bergabung Sejak</span>
