--- a/profil.html
+++ b/profil.html
@@ -50,7 +50,7 @@
         <div class="profile-sidebar">
             <div class="profile-header">
                 <div class="profile-avatar">
-                    <img src="image/-a.jpg" alt="Foto Profil">
+                    <img src="image/user.png" alt="Foto Profil">
                 </div>
                 <h2 class="profile-name">Jemi Aditia</h2>
                 <span class="profile-status">Member Premium</span>
