--- a/profil.html
+++ b/profil.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ita<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -50,9 +50,9 @@
         <div class="profile-sidebar">
             <div class="profile-header">
                 <div class="profile-avatar">
-                    <img src="image/user.png" alt="Foto Profil">
+                    <img src="image/-a.png" alt="Foto Profil">
                 </div>
-                <h2 class="profile-name">Jemi Aditia</h2>
+                <h2 class="profile-name">Lita</h2>
                 <span class="profile-status">Member Premium</span>
             </div>
             
@@ -123,11 +123,11 @@
                         <div>
                             <div class="info-group">
                                 <span class="info-label">Nama Lengkap</span>
-                                <span class="info-value">Jemi Aditia</span>
+                                <span class="info-value">Herlita</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Email</span>
-                                <span class="info-value">jemiaditia@gmail.com</span>
+                                <span class="info-value">halita7636@gmail.com</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Nomor Telepon</span>
@@ -137,11 +137,11 @@
                         <div>
                             <div class="info-group">
                                 <span class="info-label">Tanggal Lahir</span>
-                                <span class="info-value">14 juli 2006</span>
+                                <span class="info-value">13 Juni 2005</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Jenis Kelamin</span>
-                                <span class="info-value">Laki-laki</span>
+                                <span class="info-value">Perempuan</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Bergabung Sejak</span>
