--- a/profil.html
+++ b/profil.html
@@ -127,7 +127,7 @@ ita<!DOCTYPE html>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Email</span>
-                                <span class="info-value">halita7636@gmail.com</span>
+                                <span class="info-value">hlita7636@gmail.com</span>
                             </div>
                             <div class="info-group">
                                 <span class="info-label">Nomor Telepon</span>
